--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">LabActivity04</string>
+    <string name="tasks">My Tasks</string>
+    <string name="new_task">New Task</string>
+    <string name="save">Save</string>
 </resources>
